# Back-end

./: .gitignore  .gitmessage.txt  .python-version  README.md  db.sqlite3  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: checks.yml  deploy.yml
config/settings/: __init__.py  base.py  dev.py  prod.py
config/urls/: __init__.py  urls_dev.py
moCOMOco/: manage.py  schema.yaml
moCOMOco/apps/app_users/: adapters.py  apps.py  models.py  serializers.py  signals.py  social_views.py  url_views.py  urls_apps.py  views.py
moCOMOco/apps/app_users/migrations/: 0001_initial.py  0002_alter_user_position.py  0002_remove_user_address_remove_user_birthday_and_more.py  0003_user_name.py
moCOMOco/apps/chat/: apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  test_views.py  urls.py  views.py
moCOMOco/apps/chat/migrations/: 0001_initial.py
moCOMOco/apps/notifications/: models.py  serializers.py  services.py  urls.py  views.py
moCOMOco/apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_application_and_more.py  0002_alter_notification_chat_message.py  0002_alter_notification_participant.py
moCOMOco/apps/posts/: apps.py  models.py
moCOMOco/apps/posts/migrations/: 0001_initial.py  0002_alter_application_role_alter_post_category.py  0002_alter_post_options_alter_application_unique_together_and_more.py  0002_application_leave_reason_application_status_and_more.py  0002_post_writer_role.py  0002_rename_description_schedule_memo.py  0003_alter_post_date.py  0003_post_writer_role.py
moCOMOco/apps/posts/models/: __init__.py  application.py  post.py  post_like.py  schedule.py
moCOMOco/apps/posts/serializers/: application_serializers.py  empty_serializers.py  like_serializers.py  post_serializers.py  schedule_serializers.py
moCOMOco/apps/posts/services/: post_service.py
moCOMOco/apps/posts/urls/: application_urls.py  post_urls.py  schedule_urls.py
moCOMOco/apps/posts/utils/: markdown.py  mixins.py  signals.py
moCOMOco/apps/posts/views/: application_views.py  (+3 more)
moCOMOco/config/: asgi.py
moCOMOco/config/settings/: __init__.py  base.py  dev.py  prod.py
moCOMOco/config/urls/: __init__.py  urls_base.py  urls_dev.py  urls_prod.py
