[tool.poetry]
name        = "moCOMOCo"
version     = "0.1.0"
description = ""
authors     = ["workface <with.you70@gmail.com>"]
readme      = "README.md"
license     = "MIT"

# ↓ 이 부분이 핵심 ↓
packages = [
  { include = "moCOMOCo" }
]

[tool.poetry.dependencies]
python                 = ">=3.13"
requests               = ">=2.32.3,<3.0.0"
django                 = ">=5.2,<6.0"
djangorestframework    = ">=3.16.0,<4.0.0"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

[tool.isort]
profile = "black"