[tool.poetry]
name        = "moCOMOco"
version     = "0.1.0"
description = ""
authors     = ["workface <with.you70@gmail.com>"]
readme      = "README.md"
license     = "MIT"

# ↓ 이 부분이 핵심 ↓
packages = [
  { include = "moCOMOco" }
]

[tool.poetry.dependencies]
python                 = ">=3.11"
requests               = ">=2.32.3,<3.0.0"
django                 = ">=5.2,<6.0"
djangorestframework    = ">=3.16.0,<4.0.0"
drf-spectacular = "^0.28.0"
dotenv = "^0.9.9"
djangorestframework-simplejwt = "^5.5.0"
dj-rest-auth = "7.0.0"
django-allauth = "0.61.1"
boto3 = "^1.38.14"
django-storages = {extras = ["boto3"], version = "^1.14.6"}
channels = "^4.2.2"
django-cors-headers = "^4.7.0"
django-extensions = "^4.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
gunicorn = "^23.0.0"
django-filter = "^25.1"
redis = "^6.1.0"
redis-cli = "^1.0.1"
markdown = "^3.8"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pytest-django = "^4.11.1"

[tool.isort]
profile = "black"
